# mipt_ded_1_course

./: .gitignore  README.MD
BigintCPP/: .gitignore  Makefile
BigintCPP/src/: BigInt_basic.cpp
BigintCPP/src/basic/: BigInt.cpp  BigInt.hpp  abs_comparison.cpp  add_sub.cpp  arithmetic.cpp  bigint_abs_comparison.cpp  bigint_add_sub.cpp  bigint_bitops.cpp  bigint_div.cpp  bigint_mul.cpp  bitwise_arithmetic.cpp  comparison.cpp  mul_div.cpp
BigintCPP/src/debug/: macro.hpp
BigintCPP/src/utils/: compiler_opts.hpp
BigintCPP/tests/: code_generator.py  generate.py  prepare_tests.sh  runner.cpp
BigintCPP/tests/basic/: test_add_sub.cpp  test_basic.cpp
BigintCPP/tests/codegen_output/: basic_fixture.cpp
cockvm/: Makefile  README.MD
cockvm/src/: main.cpp
cockvm/src/debug/: macro.hpp
cockvm/src/disassembler/: disassembler.cpp
differential/: CMakeLists.txt  Makefile  cmake_install.cmake  compile_flags.txt
differential/src/: ast_parser.hpp  debug.hpp  differentiator.cpp  differentiator.hpp  expr.hpp  expr_operations.hpp  hash.hpp  latex.hpp  latex_converter.hpp  main.cpp  tokenizer.cpp  tokenizer.hpp  tree.cpp  tree.hpp
differential/src/codegen/: expr.py
differential/src/latex_templates/: preambule.tex  style.tex
differential/src/visitors/: arithmetic_optimizer.cpp  ast_printer.cpp  ast_printer.hpp  copier.cpp  destroyer.cpp  differentiator.cpp  helper.hpp  id_lister.cpp  latex_printer.cpp  visitors.hpp
linal/src/: matrix.hpp
markov_strings/: Makefile  README.MD  output.txt  output_manifesto.txt
markov_strings/include/: array.h  commandline_parser.h  hashmap.h  io.h  markov_chain.h  random.h  sort.h  string_proc.h  types.h
markov_strings/src/: array.c  commandline_parser.c  hashmap.c  io.c  main.c  markov_chain.c  sort.c  string_proc.c  strings.c
markov_strings/tests/: a.txt  aristocrat.txt  aristocrat_ru.txt  b.txt  errday.txt  manifesto.txt  output.txt
rays/: Makefile  README.MD  compile_flags.txt  perf.datasave.old
rays/src/: main.cpp  ray.cpp
stack_jopa/: Makefile  README.MD  compile_flags.txt
stack_jopa/include/: linked_list_stack.h  random.h  stack.h  stack_interface.h
stack_jopa/src/: linked_list_stack.c  pages.c  random.c  stack.c  stack_interface.c
stack_jopa/tests/: test_llstack.cpp
summer_school/: README.MD
summer_school/abobus/: main
summer_school/archive/: Makefile  test_output.txt
summer_school/quad/: .gitignore  Makefile  compile_flags.txt
(+79 files in other folders)
